--- a/tests/kdc/check-uu.in
+++ b/tests/kdc/check-uu.in
@@ -66,7 +66,6 @@ uu_client="${TESTS_ENVIRONMENT} ../../appl/test/uu_client"
 KRB5_CONFIG="${objdir}/krb5.conf"
 export KRB5_CONFIG
 
-rm -f ${keytabfile}
 rm -f current-db*
 rm -f out-*
 rm -f mkey.file*
@@ -112,11 +111,13 @@ ${kinit2} --password-file=${objdir}/foopassword user2@$R || \
 echo "starting uu server (using user1)"
 KRB5CCNAME=$cache1 ${uu_server} 2> uuserver.log &
 uuspid=$!
-sleep 2
+sleep 5
 
 echo "trying to contact server with client (using user2)"
-KRB5CCNAME=$cache2 ${uu_client} localhost > /dev/null 2>/dev/null || \
+KRB5CCNAME=$cache2 ${uu_client} localhost > messages.log 2>&1 || \
     { ec=1; eval "${testfailed}"; }
+
+sleep 5
 
 echo "checking if server got the right message"
 cmp uuserver.log ${srcdir}/uuserver.txt || \
