include packages/mac and all related files
git-svn-id: svn://svn.h5l.se/heimdal/branches/heimdal-release/heimdal-0-8-branch@20380 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/configure.in
+++ b/configure.in
@@ -582,6 +582,8 @@ AC_CONFIG_FILES(Makefile 		\
 	tests/kdc/Makefile		\
 	tests/gss/Makefile		\
 	tests/plugin/Makefile		\
+	packages/Makefile		\
+	packages/mac/Makefile		\
 	doc/Makefile			\
 	tools/Makefile			\
 )
